test/typeCheckTest/pass/test18.ic
class Animal {

}

class Cow extends Animal {

}


class ArrayTypingParent {
	int [][] getMatrix (string [][] stringMat) {
		return new int[][10];
	}
	
	Animal [][] getAnimals (Cow [][] cows) {
		return new Animal[][cows[cows.length - 1].length];
	}
}

class ArrayTypingChild extends ArrayTypingParent {
	int [][] getMatrix (string [][] myStringMat) {
		return new int[][30];
	}
	
	Animal [][] getAnoals (Cow [][] cows) {
		return new Animal[][cows[0].length];
	}
	
	void main (string [] args) {
		string [][] strs = new string[][3];
		int [][] testMatrix;
		testMatrix = this.getMatrix(strs);
	}
}