test/typeCheckTest/fail/test32.ic
class BadGreater {
	void main (string [] args) {
		int greater = new int [10][5] > null;
	}
}